--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,5 @@
 {
-    "version": 2,
-    "name": "Password-Manager",
-    "builds": [
-       { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/index.js" }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/api" }
     ]
- }
+  }
