--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -16,5 +15,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.2.3",
     "nodemon": "^3.1.0"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
