--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@lordicon/element": "^1.6.0",
     "@lordicon/react": "^1.6.0",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "lottie-web": "^5.12.2",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
