Refactor server configuration and add user authentication
- Refactor vercel.json to use @vercel/node for builds
- Add bcrypt and jsonwebtoken as dependencies
- Update .env file with privateKey
- Update login.module.css with color changes
- Create userModel.js for user schema
- Create passwordModel.js for password schema
- Update app.js with CORS configuration and routes
- Update Register.jsx and Login.jsx with form submission logic

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT= "8000"
 MONGO_URL= "mongodb+srv://satyabratdivedi29:Satya9005@pahla-cluster.tc15d6j.mongodb.net/PassOp?retryWrites=true&w=majority&appName=pahla-cluster"
+privateKey = 'never-share'
